//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Room {
  id Int [pk, increment]
  name String [not null]
  visits Visit [not null]
  controller Controller
  max_capacity Int [not null]
}

Table Visit {
  id Int [pk, increment]
  is_enter Boolean [not null]
  creation DateTime [default: `now()`, not null]
  room Room [not null]
  room_id Int [not null]
}

Table Controller {
  id Int [pk, increment]
  room Room [not null]
  room_id Int [unique, not null]
  work_time_start DateTime [not null]
  work_time_end DateTime [not null]
}

Ref: Visit.room_id > Room.id

Ref: Controller.room_id - Room.id